...
                        color: Colors.white,
                        fontSize: 14),
                  );
                },
              ),
              const Text(
                'Add to Cart',
                style: TextStyle(
                    fontWeight: FontWeight.w500,
                    color: Colors.white,
                    fontSize: 14),
              ),
            ],
...
